Fix spacing & positioning

--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,14 @@
 body {
   font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 }
-main {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-}
 
 /* sidebar */
 .sidebar-container {
+  position: fixed;
   background: darkgreen;
   background: no-repeat center / cover url("../img/sidebar-bg.jpg");
-  height: 100%;
+  height: 100vh;
   width: max(30%, 450px);
-  position: relative;
   display: flex;
   justify-content: center;
 }
@@ -60,16 +55,15 @@ main {
 
 /* main content */
 .main-container {
+  margin-left: max(30%, 450px);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   background-color: #f9fafb;
   width: calc(100% - max(30%, 450px));
-  margin: 0 40px;
+  padding: 40px;
 }
 
 .top-text {
-  padding: 30px 0;
   max-width: 65ch;
 
   p + p {
@@ -88,7 +82,7 @@ legend {
 fieldset {
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.25) 0 5px 20px;
-  padding: 20px 40px;
+  padding: 50px 40px;
   margin: 40px -40px;
   display: flex;
   flex-direction: column;
